--- a/app/src/main/res/layout/view_list_row.xml
+++ b/app/src/main/res/layout/view_list_row.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@drawable/row_selector">
+
+    <LinearLayout android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+       >
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="118dp"
+            android:layout_weight="2"
+            android:layout_height="125dp"
             android:weightSum="1">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Title"
-            android:textStyle="bold"
-            android:id="@+id/row_title" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Title"
+                android:textStyle="bold"
+                android:id="@+id/row_title" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -33,19 +40,32 @@
                 android:layout_weight="0.13" />
 
             <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Year"
-            android:id="@+id/row_year" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Year"
+                android:id="@+id/row_year" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Publisher"
-            android:id="@+id/row_publisher" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Publisher"
+                android:id="@+id/row_publisher" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/row_inflate"
+            android:layout_width="match_parent"
+            android:layout_weight="6"
+            android:layout_height="match_parent">
+            <!--
+            <TextView android:text="test"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </TextView>
+            -->
+        </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
