--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="selected_row">#303F9F</color>
+    <color name="selected_row">#ff8000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
