--- a/app/src/main/res/layout/content_view_list.xml
+++ b/app/src/main/res/layout/content_view_list.xml
@@ -4,24 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
 
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="bookmaster.davebilotta.com.bookmaster.ViewList"
-    tools:showIn="@layout/activity_view_list">
+    tools:showIn="@layout/activity_view_list"
+    android:weightSum="1">
 
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@android:id/list"
         android:choiceMode="singleChoice"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="35dp"
-        android:layout_marginStart="35dp" />
+ />
 </LinearLayout>
