--- a/app/src/main/res/layout/view_list_row_selected.xml
+++ b/app/src/main/res/layout/view_list_row_selected.xml
@@ -3,26 +3,19 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
         android:weightSum="1">
 
-
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/editButton"
-            android:src="@drawable/ic_mode_edit_black_24dp"
-            android:onClick="editButtonOnClick"/>
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/deleteButton"
-            android:src="@drawable/ic_delete_black_24dp"
-            android:onClick="deleteButtonOnClick"/>
-
+            android:id="@+id/icon"
+            android:src="@drawable/ic_more_vert_white_24dp"
+            android:background="@android:color/transparent"
+            android:onClick="iconOnClick"/>
     </LinearLayout>
 
  </LinearLayout>
