--- a/app/src/main/res/layout/content_view_list.xml
+++ b/app/src/main/res/layout/content_view_list.xml
@@ -10,14 +10,11 @@
     tools:showIn="@layout/activity_view_list"
     android:weightSum="1">
 
-
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@android:id/list"
+        android:gravity="center_vertical"
         android:choiceMode="singleChoice"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
- />
+        />
 </LinearLayout>
