--- a/app/src/main/res/layout/view_list_row_selected.xml
+++ b/app/src/main/res/layout/view_list_row_selected.xml
@@ -5,14 +5,16 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:weightSum="1">
 
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/icon"
+
+            android:layout_gravity="center_vertical"
             android:src="@drawable/ic_more_vert_white_24dp"
             android:background="@android:color/transparent"
             android:onClick="iconOnClick"/>
