--- a/app/src/main/res/layout/view_list_row.xml
+++ b/app/src/main/res/layout/view_list_row.xml
@@ -6,13 +6,14 @@
     <LinearLayout android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
        >
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_weight="2"
-            android:layout_height="125dp"
+            android:layout_width="330dp"
+            android:layout_height="62dp"
             android:weightSum="1">
 
             <TextView
