Added View, Edit, Delete Functionality

--- a/app/src/main/res/layout/view_list_row_selected.xml
+++ b/app/src/main/res/layout/view_list_row_selected.xml
@@ -20,4 +20,6 @@
             android:onClick="iconOnClick"/>
     </LinearLayout>
 
- </LinearLayout>
+    </LinearLayout>
+
+    <!--  android:src="@drawable/ic_more_vert_white_24dp" -->
